objects/LAT_KAMPOP__c.object
<CustomObject>
    <fields>
        <fullName>AmountLeft__c</fullName>
        <formula>Amount__c -  Delivered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo Real</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Quantidade</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Alocado</label>
        <summarizedField>LAT_ClientPOP__c.Delivered__c</summarizedField>
        <summaryForeignKey>LAT_ClientPOP__c.LAT_KAMPOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Dias__c</fullName>
        <formula>TODAY() - Last_movement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KAM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultor\Executivo</label>
        <referenceTo>User</referenceTo>
        <relationshipName>KAMPOP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_movement__c</fullName>
        <label>Última Movimentação</label>
        <summarizedField>LAT_ClientPOP__c.Delivered_Date__c</summarizedField>
        <summaryForeignKey>LAT_ClientPOP__c.LAT_KAMPOP__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <label>Planejado</label>
        <summarizedField>LAT_ClientPOP__c.LAT_Planned__c</summarizedField>
        <summaryForeignKey>LAT_ClientPOP__c.LAT_KAMPOP__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PlanningLeft__c</fullName>
        <formula>Amount__c -  (Delivered__c +  Planned__c )</formula>
        <label>Saldo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>HYPERLINK(RegionalPOP__r.product__c, RegionalPOP__r.product__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalPOP__c</fullName>
        <label>Distribuição Material POP</label>
        <referenceTo>LAT_RegionalPOP__c</referenceTo>
        <relationshipLabel>Distribuições Campo</relationshipLabel>
        <relationshipName>KAMPOP</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>is_Owner__c</fullName>
        <formula>KAM__c ==  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner?</label>
        <type>Checkbox</type>
    </fields>
    <label>Distribuição Campo</label>
    <listViews>
        <fullName>KAM_POP</fullName>
        <columns>NAME</columns>
        <columns>RegionalPOP__c</columns>
        <columns>KAM__c</columns>
        <columns>Amount__c</columns>
        <columns>Planned__c</columns>
        <columns>PlanningLeft__c</columns>
        <filterScope>Everything</filterScope>
        <label>KAM POP</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DC-{0000}</displayFormat>
        <label>Código Distribuição Campo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribuições Campo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LAT_AmountInvalid</fullName>
        <active>true</active>
        <errorConditionFormula>(Amount__c &lt; 1) ||  (ISBLANK(Amount__c))</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>O valor deve ser maior do que 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LAT_ValidateAmount</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; Amount__c &gt;  RegionalPOP__r.AmountLeft__c ) ||
(!ISNEW() &amp;&amp; (Amount__c - PRIORVALUE(Amount__c)) &gt;  RegionalPOP__r.AmountLeft__c)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Quantidade maior que o Saldo disponível.</errorMessage>
    </validationRules>
</CustomObject>